--- a/index.html
+++ b/index.html
@@ -35,15 +35,36 @@
                 <a href="contato.html">
                     <button>Contato</button>
                 </a>
-
             </div>
-
-
-
-
         </div><!--interface-->
-
     </header>
+    <main>
+        <sectio class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIA EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante,
+                        funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença
+                        online dos seus sonhos.</p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+
+                    </div><!--txt-topo-site-->
+                    <div class="img-topo-site">
+
+                    </div><!--img-topo-site-->
+
+                </div><!--flex-->
+            </div><!--interface-->
+        </sectio><!--topo-do-site-->
+
+
+    </main>
 
 
 
